WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
296572
[GStreamer] Fix content type frame rate limit
https://bugs.webkit.org/show_bug.cgi?id=296572
Summary
[GStreamer] Fix content type frame rate limit
Enrique Ocaña
Reported
2025-07-28 09:05:07 PDT
Decoder limits are set by a build configuration in the form of widthxheight@framerate. However, framerate limit is only considered when the width and height are the ones in the build config. If the actual requested resolution is different, no framerate limit is ever considered. See:
https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1547
Attachments
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2025-07-28 10:08:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/48614
EWS
Comment 2
2025-07-29 02:16:46 PDT
Committed
297974@main
(2505dd003363): <
https://commits.webkit.org/297974@main
> Reviewed commits have been landed. Closing PR #48614 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-07-29 02:23:43 PDT
<
rdar://problem/156997687
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug