[GStreamer] Fix content type frame rate limit https://bugs.webkit.org/show_bug.cgi?id=296572

Reviewed by Philippe Normand.

Decoder limits are set by a build configuration in the form of
widthxheight@framerate. However, framerate limit is only considered when
the width and height are the ones in the build config. If the actual
requested resolution is different, no framerate limit is ever
considered.

See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1547

This change introduces a behavior where limits where considered for each
variable independently. While not ideal, as lower resolutions might
support higher frame rates, and the way the build config ties
semantically the framerate to the resolution specified, an alternative
fix would require either an absolute max rate to be specified, or
possibly different sets of resolution + framerate limits, which might be
overkill to this purpose.

Original autor: Filipe Norte <filipe_norte@comcast.com>

* Source/WebCore/platform/graphics/gstreamer/GStreamerRegistryScanner.cpp:
(WebCore::GStreamerRegistryScanner::isContentTypeSupported const): Limit framerate even when the dimensions are smaller than the max limit set for them.

Canonical link: https://commits.webkit.org/297974@main